business sale left alignment fix

--- a/css/specialist.styles.css
+++ b/css/specialist.styles.css
@@ -30,7 +30,6 @@ h3 {
 }
 h4 {
   margin-bottom: 20px;
-  margin-left: 10px;
   font-size: 18px;
   line-height: 24px;
   font-weight: 700;
